<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_action</name>
  <version>0.0.0</version>
  <description>Python action server and client tutorial</description>
  <maintainer email="pg50416@alunos.uminho.pt">hugobaptista</maintainer>
  <license>Apache-2.0</license>

  <depend>tutorial_action_interfaces</depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
